--- a/vagrant/singlemachine/Vagrantfile
+++ b/vagrant/singlemachine/Vagrantfile
@@ -1,6 +1,7 @@
 # -*- ruby -*- ft=ruby
 Vagrant.configure('2') do |config|
   config.vm.box = 'centos65-minimal'
+  config.vm.box = 'https://github.com/2creatives/vagrant-centos/releases/download/v6.5.3/centos65-x86_64-20140116.box'
   config.omnibus.chef_version = :latest
   config.vm.provision :chef_solo do |chef|
     chef.add_recipe 'postgresql::server'
