--- a/vagrant/migration-example/Vagrantfile
+++ b/vagrant/migration-example/Vagrantfile
@@ -35,7 +35,7 @@ sudo -u postgres /usr/pgsql-8.4/bin/initdb -D $PGDATA --encoding=LATIN1 --locale
 echo '**** Applying postgres.conf'
 rm -f $PGDATA/postgresql.conf
 cp /vagrant/postgresql.conf $PGDATA
-chown postgres $PGDATA/potsgresql.conf
+chown postgres $PGDATA/postgresql.conf
 
 echo '**** Starting PostgreSQL'
 sudo -u postgres /usr/pgsql-8.4/bin/postgres -h '' -k $PGDATA -D $PGDATA 1>$PGDATA/pgsql.log < /dev/null 2>&1 &
@@ -43,10 +43,11 @@ echo "**** PID is $!"
 echo $! > $PGDATA/postgres.pid
 
 echo '**** Creating database
-while ! sudo -u postgres psql -h $PGDATA -c 'select current timestamp'; do echo -n .; sleep 0.2; done
+# while ! sudo -u postgres psql -h $PGDATA -c 'select current timestamp'; do echo -n .; sleep 0.2; done
 sudo -u postgres /usr/pgsql-8.4/bin/createdb --encoding=LATIN1 -h $PGDATA tinydb
-sudo -u postgres psql tinydb -c "CREATE TABLE tinytable (name charchar(50), age int)"
-sudo -u postgres psql tinydb -c "INSERT INTO tinytable VALUES ('Ruslan', 28)"
+sudo -u postgres psql tinydb -h $PGDATA -c "CREATE TABLE tinytable (name charchar(50), age int)"
+sudo -u postgres psql tinydb -h $PGDATA -c "INSERT INTO tinytable VALUES ('Ruslan', 28)"
+sudo -u postgres psql tinydb -h $PGDATA -c "SELECT * FROM tinytable"
 
 SCRIPT
 
