--- a/vagrant/migration-example/Vagrantfile
+++ b/vagrant/migration-example/Vagrantfile
@@ -1,98 +1,23 @@
 # -*- ruby -*- ft=ruby
 Vagrant.configure('2') do |config|
 
-  $yum_script =  <<SCRIPT
-echo Provisioning emacs...
-sudo yum -y install emacs
-
-echo Setting home directory for user postgres...
-sudo usermod -m -d /home/postgres postgres
-
-echo Provisioning pgdg repo...
-curl --remote-name -L http://yum.postgresql.org/8.4/redhat/rhel-6-x86_64/pgdg-centos-8.4-3.noarch.rpm
-sudo yum -y install pgdg-centos-8.4-3.noarch.rpm
-
-echo Provisioning postgresql 8.4.21...
-sudo yum -y install postgresql-libs-8.4.20-1.el6_5.x86_64 \
-  postgresql84-8.4.21-1PGDG.rhel6.x86_64 \
-  postgresql84-devel-8.4.21-1PGDG.rhel6.x86_64 \
-  postgresql84-libs-8.4.21-1PGDG.rhel6.x86_64 \
-  postgresql84-contrib-8.4.21-1PGDG.rhel6.x86_64 \
-  postgresql84-server-8.4.21-1PGDG.rhel6.x86_64
-
-sudo su
-
-echo '**** Compiling locale es_MX.iso88591'
-localedef -i es_MX -f ISO-8859-1 es_MX.iso88591
-PGDATA=/usr/local/pgsql/data
-
-echo '**** Creating cluster'
-mkdir -p $PGDATA
-chown postgres $PGDATA
-cd $PGDATA
-sudo -u postgres /usr/pgsql-8.4/bin/initdb -D $PGDATA --encoding=LATIN1 --locale=es_MX.iso88591 --pgdata=$PGDATA --auth=ident
-
-echo '**** Applying postgres.conf'
-rm -f $PGDATA/postgresql.conf
-cp /vagrant/postgresql.conf $PGDATA
-chown postgres $PGDATA/postgresql.conf
-
-echo '**** Starting PostgreSQL'
-sudo -u postgres /usr/pgsql-8.4/bin/postgres -h '' -k $PGDATA -D $PGDATA 1>$PGDATA/pgsql.log < /dev/null 2>&1 &
-echo "**** PID is $!"
-echo $! > $PGDATA/postgres.pid
-
-echo '**** Creating database
-# while ! sudo -u postgres psql -h $PGDATA -c 'select current timestamp'; do echo -n .; sleep 0.2; done
-sudo -u postgres /usr/pgsql-8.4/bin/createdb --encoding=LATIN1 -h $PGDATA tinydb
-sudo -u postgres psql tinydb -h $PGDATA -c "CREATE TABLE tinytable (name charchar(50), age int)"
-sudo -u postgres psql tinydb -h $PGDATA -c "INSERT INTO tinytable VALUES ('Ruslan', 28)"
-sudo -u postgres psql tinydb -h $PGDATA -c "SELECT * FROM tinytable"
-
-SCRIPT
-
   # config.omnibus.chef_version = :latest
 
   config.vm.define "pgsql84" do |pgsql84|
     pgsql84.vm.box = 'centos65-minimal'
     pgsql84.vm.box = 'https://github.com/2creatives/vagrant-centos/releases/download/v6.5.3/centos65-x86_64-20140116.box'
-    # pgsql84.vm.provision :chef_solo do |chef|
-    #   chef.add_recipe 'postgresql::server'
-    #   chef.json = {
-    #     'postgresql' => {
-    #       'version' => '8.4',
-    #       'password' => {
-    #         'postgres' => '1234'
-    #       },
-    #     },
-    #   }
-    # end
-    pgsql84.vm.provision "shell", inline: $yum_script
+    pgsql84.vm.provision "shell" do |s|
+      s.path = 'provision.sh'
+      s.args = '8.4'
+    end      
   end
 
   config.vm.define "pgsql93" do |pgsql93|
     pgsql93.vm.box = 'centos65-minimal'
     pgsql93.vm.box = 'https://github.com/2creatives/vagrant-centos/releases/download/v6.5.3/centos65-x86_64-20140116.box'
-    pgsql93.vm.provision :chef_solo do |chef|
-      chef.add_recipe 'postgresql::server'
-      chef.json = {
-        'postgresql' => {
-          'version' => '9.3',
-          'password' => {
-            'postgres' => '1234'
-          },
-          'enable_pgdg_yum' => true,
-          "client" => {
-            "packages" => [ "postgresql93-devel" ]
-          },
-          'server' => {
-            'packages' => [ 'postgresql93-server', 'postgresql93-contrib'],
-            'service' => 'postgresql-9.3',
-            'service_name' => 'postgresql-9.3'
-          },
-        },
-      }
+    pgsql93.vm.provision "shell" do |s|
+      s.path = 'provision.sh'
+      s.args = '9.3'
     end
-    pgsql93.vm.provision "shell", inline: $yum_script
-  end  
+  end
 end
